Чат: Изменил ограничение размеров картинок Исправил опросы Исправил отображение "кружочков" Добавлен просмотр картинок-документов Изменил систему отображения чата (без варавнивания)  - Ускорено добавление сообщение  - Исправлены проблемы с изменением размеров сообщения (например при удалении/восстаовлении)
Обертка:
Новые типы в группах и мероприятиях

--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Poll.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Poll.fmx
@@ -2,6 +2,7 @@ inherited FrameAttachmentPoll: TFrameAttachmentPoll
   Padding.Top = 10.000000000000000000
   Size.Width = 421.000000000000000000
   Size.Height = 557.000000000000000000
+  OnResized = FrameResized
   object LayoutBG: TLayout
     Align = Client
     Size.Width = 421.000000000000000000
@@ -175,13 +176,12 @@ inherited FrameAttachmentPoll: TFrameAttachmentPoll
       end
     end
     object LayoutAnswers: TLayout
-      Align = Top
+      Align = Client
       ClipChildren = True
       Padding.Left = 20.000000000000000000
       Padding.Right = 20.000000000000000000
-      Position.Y = 200.000000000000000000
       Size.Width = 421.000000000000000000
-      Size.Height = 281.000000000000000000
+      Size.Height = 291.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 1
       object Button1: TButton
