--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Video.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Video.fmx
@@ -1,20 +1,28 @@
 inherited FrameAttachmentVideo: TFrameAttachmentVideo
   Size.Width = 320.000000000000000000
-  Size.Height = 240.000000000000000000
+  Size.Height = 307.000000000000000000
+  object CircleVideo: TCircle
+    Align = Client
+    Fill.Color = x32FFFFFF
+    Size.Width = 320.000000000000000000
+    Size.Height = 267.000000000000000000
+    Size.PlatformDefault = False
+    Stroke.Kind = None
+  end
   object Image: TImage
     MultiResBitmap = <
       item
       end>
     Align = Client
     Size.Width = 320.000000000000000000
-    Size.Height = 200.000000000000000000
+    Size.Height = 267.000000000000000000
     Size.PlatformDefault = False
     WrapMode = Stretch
   end
   object LayoutInfo: TLayout
     Align = Client
     Size.Width = 320.000000000000000000
-    Size.Height = 200.000000000000000000
+    Size.Height = 267.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
     object LayoutInfoB: TLayout
@@ -24,7 +32,7 @@ inherited FrameAttachmentVideo: TFrameAttachmentVideo
       Margins.Right = 8.000000000000000000
       Margins.Bottom = 8.000000000000000000
       Position.X = 8.000000000000000000
-      Position.Y = 169.000000000000000000
+      Position.Y = 236.000000000000000000
       Size.Width = 304.000000000000000000
       Size.Height = 23.000000000000000000
       Size.PlatformDefault = False
@@ -83,7 +91,7 @@ inherited FrameAttachmentVideo: TFrameAttachmentVideo
     object LayoutPlay: TLayout
       Align = Contents
       Size.Width = 320.000000000000000000
-      Size.Height = 200.000000000000000000
+      Size.Height = 267.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 1
       object CirclePlay: TCircle
@@ -104,16 +112,16 @@ inherited FrameAttachmentVideo: TFrameAttachmentVideo
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000110000001808060000001C6216
                 32000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                011749444154384FA5943D6EC24010856D9A24654A3A84C2159228B4DC058902
-                855B2004520E140909424D0702A5A549991FAAC4E633F384838CCD7AF9A4A719
-                EFCE7BBB76E1208AA26A1CC7B7C12510B2419FA84D58A8E572603C40D02BA5A6
-                2D77CC9E42D017EAD0BADFCAAC59081A53EA1A2BC62CA721E81B75698B6F65E3
-                C510344177B264D1DC5908F941CFB41559536CC41D82DE504376437BA520648B
-                7AB4762B5BF683A029A516260FFB344FB0BF673F52793EBC4392B7412FB42DDF
-                0FBB464D8B03AD3B81F10F8DD08DEC86F6CF8271859E643B4633B9E8F421EDB5
-                2C596CF4349897E851A3F968FE088CBF68409B7FFA7FCC968279811EB4ED86BC
-                FBD3297DEA95B6DCC134437374AFA5F270BADF1FFE4010EC0094B1EE27A2F7B9
-                E60000000049454E44AE426082}
+                012049444154384FA594BD4E02411446776CD492D28E187D0521D8FA2E261644
+                DF82104D7C20131381DA4E03A1A5B1C49FCADDF52CF70B0B597699194F3299CB
+                CEFDCEDC4C419265D9499EE7ADE43FA469BA602D915D2373FA1C06C135C89ED8
+                DA3AF2C7E225883E99EA86D27F2A8B5641F6CC76AAB6662CB21B445F4CD5A76C
+                9ECADA9B41F682EC4C912AEADB0BA26F44B794078A96588B3FC8C6C8CE153774
+                1604A21F44779436957D8E03D988ADED8A1F2B5B244C34AF3E52381FD1122628
+                7874CE5DC53EEC0CC1A57C610F4BB8E001C1B1E286CEF742784AB8A7D836EAA9
+                C52E4FEF298F14A962ADBB21FCCEED5DB5D6A3FE2D08FFB28694F5B76F62B112
+                C26FDCDED1B11FCAAE6E671B2038D4913F8427AC57C217FA140EB7C7FDC3AF49
+                923FA49FEDD9DBD9B7B90000000049454E44AE426082}
               FileName = 'D:\Projects\VK_API\Samples\ChatFMX\Res\video_play_small.png'
             end>
           Align = Client
@@ -139,7 +147,7 @@ inherited FrameAttachmentVideo: TFrameAttachmentVideo
     Align = Bottom
     HitTest = True
     Padding.Top = 4.000000000000000000
-    Position.Y = 200.000000000000000000
+    Position.Y = 267.000000000000000000
     Size.Width = 320.000000000000000000
     Size.Height = 40.000000000000000000
     Size.PlatformDefault = False
