--- a/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
@@ -2,9 +2,8 @@ object FrameMessage: TFrameMessage
   ClipChildren = True
   Cursor = crHandPoint
   Margins.Left = 7.000000000000000000
-  Margins.Right = 7.000000000000000000
   Margins.Bottom = 4.000000000000000000
-  Size.Width = 580.000000000000000000
+  Size.Width = 594.000000000000000000
   Size.Height = 302.000000000000000000
   Size.PlatformDefault = False
   OnMouseUp = FrameMouseUp
@@ -17,7 +16,7 @@ object FrameMessage: TFrameMessage
     Padding.Top = 7.000000000000000000
     Padding.Right = 30.000000000000000000
     Padding.Bottom = 6.000000000000000000
-    Size.Width = 580.000000000000000000
+    Size.Width = 594.000000000000000000
     Size.Height = 302.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
@@ -25,9 +24,9 @@ object FrameMessage: TFrameMessage
       Align = Contents
       Fill.Color = xFF333333
       HitTest = False
-      Margins.Left = 30.000000000000000000
-      Margins.Right = 30.000000000000000000
-      Size.Width = 520.000000000000000000
+      Margins.Left = 29.000000000000000000
+      Margins.Right = 29.000000000000000000
+      Size.Width = 536.000000000000000000
       Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
@@ -38,10 +37,11 @@ object FrameMessage: TFrameMessage
       Align = Contents
       Fill.Color = xFF333333
       HitTest = False
-      Size.Width = 580.000000000000000000
+      Size.Width = 594.000000000000000000
       Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
+      Visible = False
       XRadius = 3.000000000000000000
       YRadius = 3.000000000000000000
     end
@@ -53,18 +53,19 @@ object FrameMessage: TFrameMessage
       Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
+      Visible = False
       XRadius = 3.000000000000000000
       YRadius = 3.000000000000000000
     end
     object LayoutClient: TLayout
       Align = Client
-      Size.Width = 416.000000000000000000
+      Size.Width = 428.000000000000000000
       Size.Height = 289.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 2
       object LayoutFrom: TLayout
         Align = MostTop
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 21.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -145,7 +146,7 @@ object FrameMessage: TFrameMessage
         DisableFocusEffect = True
         EnabledScroll = False
         Position.Y = 21.000000000000000000
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 52.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'memo_clear'
@@ -157,7 +158,7 @@ object FrameMessage: TFrameMessage
         OnMouseUp = MemoTextMouseUp
         OnMouseEnter = FrameMouseEnter
         OnMouseLeave = FrameMouseLeave
-        Viewport.Width = 416.000000000000000000
+        Viewport.Width = 428.000000000000000000
         Viewport.Height = 52.000000000000000000
       end
       object FlowLayoutMedia: TFlowLayout
@@ -166,7 +167,7 @@ object FrameMessage: TFrameMessage
         HitTest = False
         Margins.Top = 4.000000000000000000
         Position.Y = 77.000000000000000000
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 64.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 2
@@ -180,7 +181,7 @@ object FrameMessage: TFrameMessage
       object LayoutUpdated: TLayout
         Align = MostBottom
         Position.Y = 269.000000000000000000
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 20.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 3
@@ -205,7 +206,7 @@ object FrameMessage: TFrameMessage
       object LayoutFwdMessages: TLayout
         Align = Bottom
         Position.Y = 201.000000000000000000
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 50.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 5
@@ -214,7 +215,7 @@ object FrameMessage: TFrameMessage
       object LayoutDeleted: TLayout
         Align = Bottom
         Position.Y = 251.000000000000000000
-        Size.Width = 416.000000000000000000
+        Size.Width = 428.000000000000000000
         Size.Height = 18.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 4
@@ -262,16 +263,16 @@ object FrameMessage: TFrameMessage
     end
     object LayoutLeft: TLayout
       Align = Left
+      Margins.Left = 6.000000000000000000
+      Position.X = 6.000000000000000000
       Position.Y = 7.000000000000000000
-      Size.Width = 85.000000000000000000
+      Size.Width = 80.000000000000000000
       Size.Height = 289.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object LayoutLeftTop: TLayout
         Align = Top
-        Margins.Left = 5.000000000000000000
         Margins.Top = 1.000000000000000000
-        Position.X = 5.000000000000000000
         Position.Y = 1.000000000000000000
         Size.Width = 80.000000000000000000
         Size.Height = 36.000000000000000000
@@ -281,81 +282,74 @@ object FrameMessage: TFrameMessage
           Align = Right
           Cursor = crHandPoint
           Fill.Bitmap.Bitmap.PNG = {
-            89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
-            DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            087449444154785EED9B7F70545715C7BFF7BD6409641B4292FDC13F10D39848
-            7E515AD276184342A0151DA7B6366066948960AD62128BD399FE47D318662C30
-            2A3505B59D09D4EA3F8EFDA7E38022A3A49D51A7A6B4841F0E0E95062DCDE6C7
-            8646B4E4C77BD77B3627B049DEDBBCF7763732633E33993DE7ECB27BEFB9E7DE
-            77CFBD072CB2C8228BFC3F23F8356DB4B5B569573052A16B669D9428979A2CD5
-            80D5139039D70DFD2EFA4CAE6EFC2B1362D404FA84292E09810B86A99DFE0456
-            9C6F6F6F57E6F491160750A7DFCF18DAA819D8616AE2110DA280DF72850939A4
-            99F27553C7AB8593056FA4C319297540ACE3FAC8764076A8512E66734A503DBF
-            AC9ABBB7D058F1CB543A22650E686AFFF6664D18FB01ED3E36A509F36D29C433
-            C7F6BEF87B362445D20ED8D9B6A708BA7144899F99B22C1052FE066646F3D1F6
-            437F678B279272C0AEF6D64DE3C2F85526F43C362D281330A23EA93774B575FE
-            814DAE5153D51B3B3B5A771B62F4E4FFAAF304FD36B581DAC226D7B88E80277F
-            FA64E658BFEF054D08CF3F9A0E4C297FBC243CFED44BDF7869824D8E701D0177
-            62E7096AD34464C921561DA3F3AB2328D404C473ACA69800AA8AB31189FE8775
-            4F54DF5B571D79E7F45F7A589F17C711400B1E26D1C96A1A18048A76A1B52A9F
-            756F18E246675347731DABF3E2C801F4A8A3D55EC58BAB8871CBC0C8300A1E7C
-            022DB5A56C718F869C0C43CAD7628F6707388B006DF2F042ACF6FDCA0144A0F4
-            51B4942C8FC95EA0B64ADD7891D584CCEB80AF76B4D44388ADACA697E8108658
-            0CD47D13DB8393ACB9473DDE3E1B9BB6F390D001B4B717521E6035FD44876925
-            B845F9A35F47ED12563C600007A80FAC5A92F0CDA9C426DD7BFB780631789DC5
-            1841D46F5D8FFC31565DA209ACEF13C3DB58B5C4D601539E931DAC7A269C1760
-            C923A1CD682CF75336E809A9897D89A2C0F68D583E9F6C4A9B57836D5B3E85E0
-            98F7B94C04EB3762CD80B7EFA03E5CD5A235ACCEC1DE330676B0E8913234366C
-            40416E2E565CBDE970040308E4B238834A6CB9FF2EB50DF18614F67DB1740085
-            0C9DE4B0EA8970F506AC894965A8AA9874E680E252FE3773093EBC09E51EA360
-            C2187FC46E1A581AE90CCFEB31560C0AFD75B77774155BEB111865C5960036DF
-            5BC2B215DEA3C0A7FB027DFA5039AB33B074001D60B2E889F0DDA598E1BDD043
-            D8B3F56EB5A6DBA1F280877761A365F8DF26B8760DF23D468190C2724F60E900
-            3ABD65D10365A88B1BFD5B5434A0F98B5F436375997A32B04D3D21C2C53568DC
-            BE0B8F17B22D11A1B5A8CA76BA9ECC4694B13003CBF380A6EF369FD6A0D5B2EA
-            8EE2C7D05E9F28949363E0E40FF0C34B13F0B9DD20499C3EDAD639270AEC1686
-            D52CBAA6AA287D9D27826B2B11F8C8C33410A6658C593A802E2D58744919CA9C
-            84F2BC9CC32F9E3F88531156E3098511FAC8C33430B4D825CC6C2C1D307D63E3
-            9ABC7CB59C25C740EFEFF0FDD62E9CF9208AE80D36CE208450BEC3C76A3CBAE1
-            DC019EC92B98B9FABB21720EA75E3988FD2F1F47FF723F9655E66278742A3D9E
-            4910E195CA011EF383D9583A80EEEA5874457885BBD39C815ED5E9933F5723FE
-            1D3CBDAF0B27CE47E15B5D8065ABFCB1864D9F0FCC26B832E8DE01866ED9274B
-            07D045258BA98747FA69D5E9FD2F77E1B76F5CC05028578D7818FE4FE6C29793
-            C11F54C49D0FCCC6BCE97221D44DE70E50F3AB8FC5D41251F33B6EA4FDAAD3CB
-            56A94E07B3523C172D90DAFB2CCDC0F277E98A9AC514328053478FE35A969ADF
-            B3477A61B0EC93B503042EB0983A226771F6830CF8787E3B229945750EF2220B
-            33B06C0B1527B0E80ABB45EB165959C870B183B35B54073EBCC69273A49096F7
-            87960EA0CA0C2A4E60D539972FE1AF2C268F4D4EA13649677B54C3B39C4FA171
-            637C70B5516019D5960EA00204AACC60D5051771D172A951A81D5C984527DC3E
-            4F9845EF599C818A24177BD54CDDF7BA5D5185ED74A4B214165DD1DBF3479B47
-            5725BEBCA3C2D10E2EAC12AADD96A3AF16D2E36F03CB9503D8E20421EDFB62EB
-            00AAC9518DBDCCAA73A26FA2FB3D966753F5253C95F0C22380AAEA27B0DB2E9B
-            EC3D8913B49086B2D8303FD4875566DE9BACCEC1F6AAABBBBB5BDEB3E9C14195
-            2F37B0C931912B2308DF576A99176417AEC7A6C200F489617C8C6CF897D25F21
-            8A2A3E8DED9FDF82F52B97F12767A312A47DC7F1E1F21C2CCD7731FEA6FCD60B
-            ED07CFB3368784F501748E76551F7A4B058AFBBB81BC0D6869A8493A399A4285
-            FEF3DF53A39F852C952338EDBE29D15368E63D90A8A82AE165672C0AEA1FB82C
-            209AD8E49C8FFF81B7FE66A0A2B2508D73324C775E857E491E325D0CBE9ADF5F
-            39F4DC812BAC5AE2A84264677BCB09CFF783637E6CACDD86CD55F6278276506A
-            FCAACA0EAFA931F79514B83A0592C08963CF767E8E555B1C5D77AFABDDF0A709
-            6D72870E6D299B9C93318EBE7FF6E0DC7B13C82E2842D0CFF64450C2F4DACF70
-            ECD767F06F951A2F2D5161EF66D937302CA4FED8BBDD7F1E618B2D8E2280A09B
-            562A48A2FB7736B9C61CBD81F1480E8215F760ED3ADA1784100CA937221115E8
-            FDE87FE75DB5C9B9A6465CA1768DBE90DF75CE60627412C2FFD02B7B0F3BDACD
-            3A760011ABC692A09AC0249954CEB889C9EB74B2C3871B4B32D49C557FB9B4C9
-            21D91B429ABBBBDA0EFF84D57971E500A2A9BDE5C89D5824C51C39FA6C6733CB
-            8E70ED682A45532F2988829473243334B68765C7B88E8069683A9872F447C9AC
-            09A980E6BC2EFDAD6EC23E1ECF0E20EE8452595D88C79D2E7856785D6B62508D
-            6EA6E1AB8E152E2F30F49CA7DF4EA6F3445211100F15534DD513A5B7A486B6B7
-            6AF3F24C3205D2F1241501F150FDFE2AA3E07E69CA464F59E43CD077D277D3DE
-            3E559D27521601F1C492282D5A43951912F20B5E6B0DE824870E33289FA794F6
-            8EFF2F33569033A83861EA7E3E76455D1ABBA8A4BBBAE9EB2ABAB4A073FBA9A3
-            EB4B7480496778748C958E4E2FB2C8228B2C1203F82F4AEEB7AF1ECA0F490000
-            000049454E44AE426082}
+            89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
+            87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+            07A8494441546843D599D953537714C7BFC9CD0D242124212C02B20888A88068
+            15ACD66AB5CCB4B5DAA94E6B1FEA431F7CB48FFD27FA563BED4C3BED74C62E2E
+            A53A53A73A95295AEDA865DC50AA10B155104496A00102D9E839977B3537EB0D
+            C176F8CC6472F3CB5DCEF9FDCEEF6C5737436001A397BF172C0B5E817933A150
+            2884C9292F7D26E19D9E823F1890C618BD5E0F5130C094910973A6893E66E874
+            3AE9932E6929C0974E4E7B716FA017AEDEBB18181EC4F0D828DC4FDC344E4AF8
+            FDD279A228C24CC23BB21DC8B5E7A030B7004B4B2A50565842E3A6B41499B302
+            7CD9C5CECBF8E3FA253C1C7984B1278F119A999DF164E8757AD8AD362CCACDC7
+            C6FA26ACAF7D61CE4AA4ACC08477125DF7EFA0F5D259DCBEE79247D3A3A6AC0A
+            CD4D5B505D5AF9D4BCB49292028FC79FE0A7B613B872BB031364EBF38985045F
+            53538FB7B76C9756472B9A1560FB6E21E1AF757590A9CC79DB24444F33DFB0AC
+            0EBB5FD921ED132D6852A0C3D58943A78F49B6FE5FB0C8998F3DCD6FA3BE6A45
+            52734A1A0778E6D3175E84C36A968F93C3CF3AACF1990915609B6FF9EDC43CCC
+            7C108EF24DD854989A122D6D3F4B322422AE02EC6D78C35EEBEE9047D2218421
+            2FB0B9792F9A6BCA60D418FFAF75DD906418F74EC823D1C4BD5537B94AF636F3
+            B5613D14E082193634D6BF8CA602F632C9EFCBCF6619BAEFF7487127163115E0
+            934F939F9F5757E91EC1307D19ED45D8B8E955541AB4F97A9681634E3CA21460
+            E139C2A61AA40C82201FC521388291F1D94393BD12AFBDB416B9E461B4AC2FCB
+            72F1E6E598AB10A500E7369C1EA484311F0D95C510435ACD4D076749031A163B
+            2106B55DC33271B2184994029C98A5E6756C58DDB805AB17E7C3E2F12798D12C
+            584CF2212198EC584E29843D43AF691558A67B0FFBE45FCF5029C0E92F67959C
+            9869422720BFA2161BCA4BE0B42F4579A19122A3FC9F0A3DB2AA96A352656502
+            9CCBEBD06873B2DDCA63F119F33C26D97A9EA6E80A2A057889387069CE2A33EC
+            58595103A799727D471ED6D5BF8022A341FE57410F8BA31ADB5656D3B17AE3EA
+            7439A86F288738955C019689658B742C110A4C4AF9BC566CD9E5A82C76D05C12
+            82098B6B5EC4AECD6FA2714901328D3466B6A0A4AA09DB5FDE8ADA5C2B09CC27
+            AA31952EC792904F93198D906C91FB40950BB1FD7F72F80BB869B9B450B3E103
+            BC579BAF9E57BA5DB4305C7DC98751CCE0C6A9CF70F48E073A6362D7EAB0DAF1
+            E19E7D5221A4A05A012E03B992D2860D2BCAF2228C8220493901537FE4FFE0C3
+            E0FD5B703D7C1C66F6E4914ACB61F50692AE027B487F60B6CA5388DAC44A1998
+            1473318AB3E4638DDC6DFF1D47BFF91117EEA8CD34C39207AB10947FC52740C2
+            07136DE25430503948FE23217EAF17C38FFAF1CF8D769C3CF8293E6F69457F96
+            0E8F7C6CA2CFE6DB64CAA57A994692E8106B85540A48DD032AC0B56035C5CF2C
+            BD43FFA0FD5C1B7EF9E9387E3874105F1D3986B3BD43C8586C8398254A79D1B4
+            7C2E633088C81033319324108A749E403286A3FAC5AD0FEE1EA485A70B47BEFE
+            1E3FB7B5E1D2800B83080045561873CD10943494F659E44E93844F120FB883C1
+            CA86A35280FB36DCFA98334137CEB79C40A78F842E30C3603542C834402FE8D5
+            9B9D262A325A682127DB2EC9188E4A016E3A71DF460B5E5FB811C87847F1C01D
+            A0D9A6882C7BA058643A7260918F9920793FFF748CFB45E024D958C670221430
+            4BC534F76D9231F5A097CC2306949526BEDC86BA8A22F97896094F1F061F91F7
+            8BA330C332153A0BA4EE4538AA47F18C71C74C535BC3D78DAB7F4F50B1188625
+            079505F14D50A737A0B86A159A0AF3C384F5A3EFCA65F40922F4096A04966969
+            6945D4AA4629C0518E3B665A70DDBA84C1F0C8AE73606DF356D4D8388F882403
+            95151BB07DF52AE451EEF4548CD16EB4750C40B088891640EA54942D2A49AC00
+            C33B9DDB7D5A700FBA70F56EAFDAA3E42CC1CEAD6FE1F5DAA528B2DB28FC3B51
+            545487E66D3BB163FD3A143BC24DC08DCB27CFA25F4FDEC594B820DAB8AA31CA
+            FE99987D211EFAF8E001AA84EEC8230930E6E1A517B7614B752944657662E643
+            04FDAFCC9F7FCA8DEBBF1EC72F175CF09567434830FDCBA86EF868EFFEA8D967
+            626E373E917B95911B2626BE219CFFA315E73B3AE11EF7CD8EB1A0B13EB3FF92
+            B3EAC79963C7F16B7B17A60AB24888F8C2B30C2C4B3CE2FA0B6EB472AF92DB7D
+            49090CE35C7B2B8EB5B5A2E3BE277E3CF27BD17FE31C0E7FF73DDAFEEAC1447E
+            B6643AF11EC19E8765605978026211B7B5C8C3DC54FAF6D451A9B5911CBE0D15
+            E953D3981977A07445054AAD79C8CD0AC1EB19C2D0831EDCECEC87473440B09B
+            206653440D5B9558AC59568FF7DF7807364B76EA0A28701574E0C89729D6C9B4
+            07020184268394E1066932D88404E8CDE42A299DD0B0A692D7D9FFEEBEA44D5E
+            4DCDDDEBAE4ECDBDCAF92095E6AE2605F814A557C9EDBEE7DA5EAFAEC3EEAD3B
+            242598795140E179BFE0584D1B76D72BDB61CF7A0E2F3814B8D1DA7DAF07A7FF
+            3C832E2D714203ECE795574CAC48B2590F27650518E5126EF73D7DC9E799C34B
+            3E32138EB0EB6BD74AE3A908AE30270514F8526E7370C78C9B4EECB1B8F531FA
+            644C2AC0B986E59B7325C5290AE7F39C127356C98919E7369C1ECC457085B414
+            08871B02BC2F58A1297E471C56807319C89594F2A25B3193740457983705FE2F
+            E2A6120B8505AE00F02F84F0376F7CFFE4530000000049454E44AE426082}
           Fill.Bitmap.WrapMode = TileStretch
           Fill.Kind = Bitmap
-          Margins.Right = 15.000000000000000000
-          Position.X = 29.000000000000000000
+          Margins.Right = 14.000000000000000000
+          Position.X = 30.000000000000000000
           Size.Width = 36.000000000000000000
           Size.Height = 36.000000000000000000
           Size.PlatformDefault = False
@@ -363,6 +357,8 @@ object FrameMessage: TFrameMessage
         end
         object LayoutSelectedIcon: TLayout
           Align = Left
+          Margins.Left = -1.000000000000000000
+          Position.X = -1.000000000000000000
           Size.Width = 17.500000000000000000
           Size.Height = 36.000000000000000000
           Size.PlatformDefault = False
@@ -399,7 +395,9 @@ object FrameMessage: TFrameMessage
     end
     object LayoutRight: TLayout
       Align = Right
-      Position.X = 501.000000000000000000
+      Margins.Left = -4.000000000000000000
+      Margins.Right = 5.000000000000000000
+      Position.X = 510.000000000000000000
       Position.Y = 7.000000000000000000
       Size.Width = 49.000000000000000000
       Size.Height = 289.000000000000000000
