--- a/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
@@ -29,6 +29,7 @@ object FrameChat: TFrameChat
         TabOrder = 0
         object LayoutHeadNormal: TLayout
           Align = Client
+          Locked = True
           Size.Width = 618.000000000000000000
           Size.Height = 48.000000000000000000
           Size.PlatformDefault = False
@@ -175,6 +176,7 @@ object FrameChat: TFrameChat
                 02000000CDCCCC3E00008040020000000000803F000080400300000000000041
                 00003041}
               Fill.Color = xFF828282
+              Locked = True
               Size.Width = 11.000000000000000000
               Size.Height = 13.000000000000000000
               Size.PlatformDefault = False
@@ -190,7 +192,7 @@ object FrameChat: TFrameChat
             Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 8
-            object TPath
+            object PathVer: TPath
               StyleName = 'verified'
               Align = Right
               Data.Path = {
@@ -203,6 +205,7 @@ object FrameChat: TFrameChat
                 C2F5A04002000000FC3E21417E69944002000000EE1217417E69944002000000
                 CCCC1041C2F5A0400300000000009040A4701941}
               Fill.Color = xFF71AAEB
+              Locked = True
               Margins.Left = 4.000000000000000000
               Margins.Right = 4.000000000000000000
               Position.X = 3.000000000000000000
@@ -396,10 +399,10 @@ object FrameChat: TFrameChat
       Align = Bottom
       Corners = [BottomRight]
       Fill.Color = xFF292929
-      Position.Y = 526.000000000000000000
+      Position.Y = 626.000000000000000000
       Sides = [Top, Bottom, Right]
       Size.Width = 686.000000000000000000
-      Size.Height = 167.000000000000000000
+      Size.Height = 67.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
       XRadius = 12.000000000000000000
@@ -417,19 +420,19 @@ object FrameChat: TFrameChat
       object LayoutFooterMessage: TLayout
         Align = Client
         Size.Width = 686.000000000000000000
-        Size.Height = 167.000000000000000000
+        Size.Height = 67.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 8
         object LayoutSendControls: TLayout
           Align = Contents
           Size.Width = 686.000000000000000000
-          Size.Height = 167.000000000000000000
+          Size.Height = 67.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 0
           object Layout3: TLayout
             Align = Bottom
             Locked = True
-            Position.Y = 104.000000000000000000
+            Position.Y = 4.000000000000000000
             Size.Width = 686.000000000000000000
             Size.Height = 63.000000000000000000
             Size.PlatformDefault = False
@@ -495,7 +498,7 @@ object FrameChat: TFrameChat
           Margins.Right = 55.000000000000000000
           Margins.Bottom = 13.000000000000000000
           Size.Width = 576.000000000000000000
-          Size.Height = 140.000000000000000000
+          Size.Height = 40.000000000000000000
           Size.PlatformDefault = False
           Stroke.Color = xFF555555
           XRadius = 6.000000000000000000
@@ -504,7 +507,7 @@ object FrameChat: TFrameChat
             Align = Right
             Position.X = 528.000000000000000000
             Size.Width = 48.000000000000000000
-            Size.Height = 140.000000000000000000
+            Size.Height = 40.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 2
           end
@@ -512,8 +515,6 @@ object FrameChat: TFrameChat
             Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
             Caret.Color = claWhite
             DataDetectorTypes = []
-            Lines.Strings = (
-              #1042' '#1088#1072#1079#1099' '#1087#1088#1086#1097#1077' '#1080' '#1083#1091#1095#1096#1077' '#1087#1080#1089#1072#1090#1100)
             StyledSettings = [Style, FontColor]
             TextSettings.Font.Family = 'Roboto'
             TextSettings.Font.Size = 13.000000000000000000
@@ -526,19 +527,19 @@ object FrameChat: TFrameChat
             Margins.Right = 10.000000000000000000
             Margins.Bottom = 10.000000000000000000
             Size.Width = 508.000000000000000000
-            Size.Height = 120.000000000000000000
+            Size.Height = 20.000000000000000000
             Size.PlatformDefault = False
             StyleLookup = 'memo_clear'
             TabOrder = 1
             TabStop = False
             OnKeyDown = MemoTextKeyDown
             Viewport.Width = 508.000000000000000000
-            Viewport.Height = 120.000000000000000000
+            Viewport.Height = 20.000000000000000000
             object LabelTextHint: TLabel
               Align = Client
               StyledSettings = [Style]
-              Size.Width = 508.000000000000000000
-              Size.Height = 120.000000000000000000
+              Size.Width = 50.000000000000000000
+              Size.Height = 50.000000000000000000
               Size.PlatformDefault = False
               TextSettings.Font.Family = 'Roboto'
               TextSettings.Font.Size = 13.000000000000000000
@@ -565,26 +566,26 @@ object FrameChat: TFrameChat
       Fill.Color = xFF222222
       Margins.Right = 1.000000000000000000
       Size.Width = 685.000000000000000000
-      Size.Height = 374.000000000000000000
+      Size.Height = 474.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       object VertScrollBoxMessages: TVertScrollBox
         Align = Contents
         Size.Width = 685.000000000000000000
-        Size.Height = 374.000000000000000000
+        Size.Height = 474.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         OnResize = VertScrollBoxMessagesResize
+        OnResized = VertScrollBoxMessagesResize
         OnViewportPositionChange = VertScrollBoxMessagesViewportPositionChange
         Viewport.Width = 685.000000000000000000
-        Viewport.Height = 374.000000000000000000
+        Viewport.Height = 474.000000000000000000
         object LayoutMessageList: TLayout
-          Position.X = 19.000000000000000000
           Position.Y = 16.000000000000000000
           Size.Width = 641.000000000000000000
           Size.Height = 289.000000000000000000
           Size.PlatformDefault = False
-          TabOrder = 40
+          TabOrder = 41
           OnResize = LayoutMessageListResize
           object LayoutActivity: TLayout
             Align = MostBottom
@@ -682,11 +683,46 @@ object FrameChat: TFrameChat
             end
           end
         end
+        object LayoutReloading: TLayout
+          Align = VertCenter
+          Position.Y = 138.000000000000000000
+          Size.Width = 685.000000000000000000
+          Size.Height = 97.000000000000000000
+          Size.PlatformDefault = False
+          Visible = False
+          TabOrder = 40
+          inline FrameLoading1: TFrameLoading
+            Align = Client
+            Locked = True
+            HitTest = False
+            Size.Width = 685.000000000000000000
+            Size.Height = 97.000000000000000000
+            Size.PlatformDefault = False
+            inherited LayoutAni: TLayout
+              Align = Client
+              Locked = True
+              Size.Width = 685.000000000000000000
+              Size.Height = 97.000000000000000000
+              inherited Circle2: TCircle
+                Locked = True
+                HitTest = False
+              end
+              inherited Circle3: TCircle
+                Locked = True
+                HitTest = False
+              end
+              inherited Circle1: TCircle
+                Locked = True
+                HitTest = False
+              end
+            end
+          end
+        end
       end
       object LayoutBottomHints: TLayout
         Align = Bottom
         Margins.Bottom = 12.000000000000000000
-        Position.Y = 312.000000000000000000
+        Position.Y = 412.000000000000000000
         Size.Width = 685.000000000000000000
         Size.Height = 50.000000000000000000
         Size.PlatformDefault = False
@@ -695,6 +731,7 @@ object FrameChat: TFrameChat
           Align = Right
           Cursor = crHandPoint
           Fill.Color = xFF292929
+          Locked = True
           Margins.Right = 12.000000000000000000
           Position.X = 633.000000000000000000
           Size.Width = 40.000000000000000000
@@ -787,6 +824,7 @@ object FrameChat: TFrameChat
         end
         object Layout16: TLayout
           Align = MostRight
+          Locked = True
           Margins.Left = 8.000000000000000000
           Margins.Right = 8.000000000000000000
           Position.X = 646.000000000000000000
@@ -814,6 +852,7 @@ object FrameChat: TFrameChat
               33331B4133331B410200000099992141CDCC1441020000009999214133330B41
               0200000033331B41CDCC044103000000CDCCCC400000A040}
             Fill.Color = xFF828282
+            Locked = True
             Hint = #1057#1082#1088#1099#1090#1100
             Size.Width = 10.000000000000000000
             Size.Height = 10.000000000000000000
@@ -897,6 +936,7 @@ object FrameChat: TFrameChat
         TabOrder = 0
         object Layout2: TLayout
           Align = MostRight
+          Locked = True
           Margins.Left = 8.000000000000000000
           Margins.Right = 8.000000000000000000
           Position.X = 646.000000000000000000
@@ -924,6 +964,7 @@ object FrameChat: TFrameChat
               33331B4133331B410200000099992141CDCC1441020000009999214133330B41
               0200000033331B41CDCC044103000000CDCCCC400000A040}
             Fill.Color = xFF828282
+            Locked = True
             Hint = #1054#1090#1082#1088#1077#1087#1080#1090#1100
             Size.Width = 10.000000000000000000
             Size.Height = 10.000000000000000000
@@ -937,6 +978,7 @@ object FrameChat: TFrameChat
         end
         object Layout6: TLayout
           Align = Left
+          Locked = True
           Margins.Left = 4.000000000000000000
           Margins.Right = 8.000000000000000000
           Position.X = 24.000000000000000000
@@ -966,6 +1008,7 @@ object FrameChat: TFrameChat
               2F33934002000000CECC3C412F33934002000000CECC3C41FCFF8F4002000000
               CECC3C419599894003000000CDCC3C419A998940}
             Fill.Color = xFF828282
+            Locked = True
             Size.Width = 12.000000000000000000
             Size.Height = 12.000000000000000000
             Size.PlatformDefault = False
