--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Document.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Document.fmx
@@ -1,10 +1,10 @@
 inherited FrameAttachmentDocument: TFrameAttachmentDocument
   Margins.Top = 4.000000000000000000
-  Size.Width = 354.000000000000000000
+  Size.Width = 345.000000000000000000
   Size.Height = 32.000000000000000000
   object LayoutGeneral: TLayout
     Align = Contents
-    Size.Width = 354.000000000000000000
+    Size.Width = 345.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
@@ -16,75 +16,76 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
           PNG = {
             89504E470D0A1A0A0000000D494844520000001E000000D208060000005D1A70
             6D000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            068849444154785EED9C696C146518C7FF33DBED4977BBEDB6B44B694168A185
-            16B460B1822842C54652221AAF2F24C454131324844363E2116294C4188C5F88
-            21E007312A9AE00750D444830978D41841CAE9010B724311283D76D7F7997D47
-            DADDB976777897B2F34B36F33CB3B3F3DBF79877E6ED74565AF1FEEF6D1117D6
-            BB24A912020845224129840E59A4942017396591521572CA3C168E231646DAC4
-            D2AA0FF64578ACC91B4FD6F12831566FEEE29136376F896F144E1B0BC369E338
-            9C36B68BE1D9C666ED6884D3C6C270C4C2489F98E6323C160639659A408994AB
-            933669C5B6D56D11994DA2129843BDD9FABAB25CB5E34565990861128769B698
-            A03455C8454E69E5972F243D72A552F2B4F5EAA44A9C4A4955865789559C364E
+            068849444154785EED9C696C146518C7FF33BBDB93EE76DB6D694B2920B4D042
+            0B5AB0584114A1622329118DD7171262AA890912C2A131F108314A620CC62F8D
+            21E007311234C10FA0A8890613F0A8318294D3030A724311286DF7F07D66DF91
+            7677AEDD1DDEA5ECFC92CD3CCFECECFCF63DE69D793B9D95567EF87B6BD8850E
+            B724554200C148A45B0EA15D162925C8454E59A454859C328F85E388859136B1
+            B4FAA3FD111E6BF2D6D3B53C4A8C359BBB78A4CDAD5BE29B85D3C6C270DA380E
+            A78DED6278B6B1593B1AE1B4B1301CB130D227A6B90C8F85A1CC9F68022552AE
+            4EDAA495DBD7B4866574B8129843BDDDF2A6B25CBDF36565990821128769B698
+            A03455C8454E69D5972F253D72A552F2B4F5EAA44A9C4A4955865789559C364E
             04A78D85E1B4B13052AA6A9561D5B9324F9CB6CEE5B4B1301CB13032504C7319
-            1E0B839C324DA044CAD5499B736F5108CEBD45A1D8222ECACFC292395578F5D1
-            09CA9272336C112F9A11404D790172DCB2B2A4DC0C5BC45525793C8A129B6B61
-            8BF8E8B91E1E4589CDB5B045FCE9EE133874F20A7AFBC3CA92723386C71FCA17
-            348D8424F124452C8BEB2B47E0EE09C568A92DE66B52C392984A397F4A9912B7
-            3696C293677E9C9A61493CEDB62294797394988ED5F669E54A9C0AA662B74BC2
-            BC063FCFA24C1A5DA854FD6068BBC75B0270596C3CD3CD664E2C8627DFCDB3EB
-            50A9B3B3AEF7B485D3CB31758C17F3585358C1509C9FE3C2ECFA129E0DC5CBBE
-            4C6B63B4DD9BC67AD1C49A83B8A7AE0455FE1447AE3993FCC875BB78164F4BAD
-            0FB78FF1A09D955645663DF1B1BB024AD51BA12BF615B831A3C6C7336D649949
-            5A46B12A1FBA9B92C26C3C74C7489E69A32B7E604A29B24CBEB511CDEC4BD756
-            14F02C1E4D71C0978329D51E9E25CF23CD15C8CBD62E9BE6DA07A796B14123F5
-            B1918E8685D32B783614E76EAA30D227CEBC7B8BDB3A76B5B910592F49B29039
-            5424120E862075C822A504B9C8C9C674715215723AC7B13086B758627BF1D514
-            A2E6E12AB4BCD2C8D71A23ED7866775267A7AC7C17FCF545F037B2175BBA0BAE
-            5F6B7FF5EC0F3CD22721717E592E4A49D4E043D1B842C83A572856C409553555
-            63EDA26A14D77A74A556B1A58DC3A108CE1FBCC4336B242DEEBF32807F7E3C8B
-            DF361CC2772B3AD1F97662FFCD9694F8A7B7F6E15B26DBBBF1084EFD7C1E033D
-            21FE8E7592125F3CFC2F3BCDF024491212DB71E5A9624BE74A065BC4C5133CA8
-            7B6A2CCFAC91B278ECFC009A9EAF43E5CCE8CC71A0D75A47B324D62B110D9BE3
-            160CBD8EE839D3CB23634CC5B1250AF58795A5020B236CF05009F5857060CBDF
-            3C33C650AC55A2ABA7AEF18855EBB5103ADFD98FE0CED3F863FB71EC5AB30717
-            0E581BC18C4B6CA144744C776DFE13473E0F5AAE66C2F4EC5434BE101577FAD1
-            77B91F27769D4968E746247D3E4E95940FA764C94031CD65782C0C72CA348112
-            2957276DD2B165CBDAD8C96EBD240B9A2D86C341761875C822A504B9C8298B94
-            AA90D3398E85E188859136B1747CF972C3F371F19225C8AD337FCAEB5A5717CE
-            6FD8C033734C4B6C454AC46E277BBDF02D5ECCB378ECAF6A36CD2998350B652B
-            57226FF264BE321EDBC5FEA54BE16D6F879C13BD33A787EDE2EC4A6B437FDA7A
-            B5EDE2BEA0B56B0ADBC567D7AD43F7D6AD08F71A5F7FDB5FD59108AEECDC89D3
-            6BD7A267EF5EBE321E53310D0C5688DD2EDCDD8D0B9B36F12C1ED391EB4671EB
-            F46AAB38626164A098E6323C160639659A408994AB933629BCA5B98D0DAFF40F
-            9A42E650E15024C82E523AA4D027CDC7444955482E8B9612E4748E6361649E58
-            8A7C3643FB0A64443550FF34503215701700FD5781EE83C0B12FD86B07DB40FD
-            98048C6E65AFF980B7966D9B4F37A58073BF02FBDE032E6BFFFD5A5F7CFF8780
-            670C4F6238BA1DE87C2D1A37BD0C5431A91697FE02BE79822743D1AF6A3D2911
-            B88F078CC0BD3CD0C0601FC9B571562E0F1883E304700E2761386261DCA4E28B
-            6C883CF231B07F2370F823E0CC2F74D1C4DF1C04ADA3F7681BDA963E439F3540
-            7FC81CCF86BAC36CD88C25AF9C0D932F01DF3F17CD67BECB86CF3540CFC9683E
-            18BD7D30F4C552162BC9004F62C8F6017D17E2E3580CF6A15FD57A5262B0484F
-            4A18ECC3E9D5C2C840314D27782C0C650A43132891F2FF276DCE738B22709E5B
-            144ADAC4961E57583C7B34268E1AFA9811A1FEDCDDDC063FBEDE735689AD62A9
-            C45AD2C1CC6D2855E489605B55272AB7B58D1391DBDEB9ACCA2D752EBDDF53BC
-            757F4B31995F09BD697F21D4110BC3110BC39278FFF1CB3CB28695ED9DC70785
-            9181E20C7B6E111DFF0169EA809CBF06CD0C0000000049454E44AE426082}
+            1E0B43993FD1044AA45C9DB439F71685E0DC5B148A2DE2C23C3796CEADC2EB8F
+            4F5496949B618B78F1CC0A5497E523DB232B4BCACDB0455C559CCBA328B1B916
+            B6888F9DEFE55194D85C0B5BC49FEE3989C3A7AEA26F20AC2C29376378FCA17C
+            61E34848124F52C4B2B8AE7204EE9D5884E69A22BE26352C89A9940BA6962A71
+            4B4309BCB9E6C7A91996C4D3EF2844A92F5B89E9586D9B5EA6C4A9602AF6B824
+            CCAF0FF02CCAE4D1054AD50F86B67BB2B9022E8B8D67BAD9AC4945F0E6797876
+            032A7596FB464F5B34A30CD3C6FA309F3585150CC579D92ECCA92BE6D9507CEC
+            CBB43444DBBD719C0F8DAC3988FB6A8B51154871E49A3B39801C8F8B67F134D7
+            F871E7582FDA58695564D6139FB8A742A97A2374C5FE7C0F6656FB79A68D2C33
+            49F32856E54377535C908547EE1AC9336D74C50F4D2D81DBE45B1BD1C4BE744D
+            793ECFE2D11457F8B331758C9767C9F358533972B3B4CBA6B9F6E169A56CD048
+            7D6CA4A361D18C729E0DC5B99B2A8CF48933EFDEE2F6F6DDAD2E843B24C92564
+            0E158984BA4390DB659152825CE46463BA38A90A399DE35818C35B2CB1BDF8AB
+            0B50FD68159A5F6BE06B8D91763EB727A9B3933BCF85405D21020DECC5969EFC
+            1BD7DA5F3DFF038FF449489C579A831212D5FB5138BE00B2CE158A157142554D
+            D558B3780C8A6ABCBA52ABD8D2C6E15004170E5DE6993592160F5C0DE29F1FCF
+            E1B70D87F1DDCA4E74BE9BD87FB32525FEE99DFDF896C9F66D3C8AD33F5F40B0
+            37C4DFB14E52E24B47FE65A7199E244942623BAE3C556CE95CC9608BB868A217
+            B5CF8CE3993552168F5B5081C6176B51392B3A730CF659EB6896C47A25A26173
+            FCC2A1D711BD67FB78648CA938B644A181B0B2546061840D1E2AA1FE100E6EFD
+            9B67C6188AB54A74EDF4751EB16ABD1E42E77B07D0BDEB0CFED87102BBD7EEC5
+            C583D64630E3125B28111DD35D9BFFC4D1CFBB2D5733617A762A9C5080F2BB03
+            E8BF328093BBCF26B47323923E1FA74ACA8753B264A098E6323C160639D9C44D
+            6E172957276DD2F1E5CB5BD9C9AE43926531B3C570B89B1D46EDB24829412E72
+            CA22A52AE4748E6361386261A44D2C9D58B1C2F07C5CB47429726ACD9FF2BADE
+            D5850B1B36F0CC1CD3125B9112B1DBC93E1FFC4B96F02C1EFBAB9A4D73F267CF
+            46E9AA55C89D3285AF8CC7767160D932F8DADA206747EFCCE961BB38ABD2DAD0
+            9FB65E6DBBB8BFDBDA3585EDE273EBD7A367DB3684FB8CAFBFEDAFEA48045777
+            EDC29975EBD0BB6F1F5F198FA99806062BC46E17EEE9C1C54D9B78168FE9C875
+            B3B87D7AB5551CB13032504C73191E0B839C324DA044CAD5499B14DEDAD41A0E
+            A3C3E516F3FF99A120DD4965E2E096A6E3A2A42A8A5CB49420A7731C0B23F3C4
+            52E4B399DA572023C60075CF02C5D3004F3E30700DE839041CFF82BD76B20DD4
+            8F49C0E816F65A00F86AD8B67974530A38FF2BB0FF03E08AF6DFAFF5C50F7E0C
+            78C7F22486633B80CE37A271E3AB4015936A71F92FE09BA7783214FDAAD69312
+            150FF08051713F0F3430D847726DECCEE10163709C00CEE1240C472C8C5B547C
+            890D9147B700073602473E01CEFE42174DFCCD41D03A7A8FB6A16DE933F45903
+            F487CC096CA83BC286CD5872CBD830F90AF0FD0BD17CD6FB6CF85C0BF49E8AE6
+            83D1DB07435F2CB95949823C8921CB0FF45F8C8F6331D8877E55EB4989C1223D
+            2961B00FA7570B2303C5349DE0B130A2F32736811229FF7FD2E63CB72802E7B9
+            45A1A44D6CE9718525734663D2A8A18F1911EACFDDCDAB0FE0EBBDE794D82A96
+            4AAC251DCCBCFA12459E08B65575A2725BDB3811B9ED9DCBAADC52E7D2FB3DC5
+            DBF7B71493F995D05BF617421DB1301CB1302C890F9CB8C2236B58D9DE797C50
+            181928CEB0E716D1FE1F370D809849AC7DD70000000049454E44AE426082}
           FileName = 'D:\Projects\VK_API\Samples\ChatFMX\Res\doc_icons.png'
         end>
       Align = Left
       BitmapMargins.Top = -30.000000000000000000
       BitmapMargins.Bottom = -150.000000000000000000
       ClipChildren = True
-      Locked = True
+      MarginWrapMode = Tile
       Margins.Right = 8.000000000000000000
       Margins.Bottom = 2.000000000000000000
       Size.Width = 30.000000000000000000
       Size.Height = 30.000000000000000000
       Size.PlatformDefault = False
+      WrapMode = Place
     end
     object LayoutContent: TLayout
       Align = Client
-      Size.Width = 316.000000000000000000
+      Size.Width = 307.000000000000000000
       Size.Height = 32.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 1
@@ -92,7 +93,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
         Align = Bottom
         StyledSettings = [Style]
         Position.Y = 17.000000000000000000
-        Size.Width = 316.000000000000000000
+        Size.Width = 307.000000000000000000
         Size.Height = 15.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Family = 'Roboto'
@@ -106,7 +107,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
         Align = Client
         StyledSettings = []
         HitTest = True
-        Size.Width = 316.000000000000000000
+        Size.Width = 307.000000000000000000
         Size.Height = 17.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Family = 'Roboto'
@@ -123,7 +124,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
   end
   object LayoutPreview: TLayout
     Align = Contents
-    Size.Width = 354.000000000000000000
+    Size.Width = 345.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
@@ -131,7 +132,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
       Align = Contents
       Fill.Color = x14FFFFFF
       HitTest = False
-      Size.Width = 354.000000000000000000
+      Size.Width = 345.000000000000000000
       Size.Height = 32.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
@@ -141,7 +142,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
         item
         end>
       Align = Client
-      Size.Width = 354.000000000000000000
+      Size.Width = 345.000000000000000000
       Size.Height = 32.000000000000000000
       Size.PlatformDefault = False
       WrapMode = Stretch
@@ -154,7 +155,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
         Margins.Bottom = 8.000000000000000000
         Position.X = 8.000000000000000000
         Position.Y = 1.000000000000000000
-        Size.Width = 338.000000000000000000
+        Size.Width = 329.000000000000000000
         Size.Height = 23.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -164,7 +165,7 @@ inherited FrameAttachmentDocument: TFrameAttachmentDocument
           HitTest = False
           Padding.Left = 7.000000000000000000
           Padding.Right = 7.000000000000000000
-          Position.X = 248.000000000000000000
+          Position.X = 239.000000000000000000
           Size.Width = 90.000000000000000000
           Size.Height = 23.000000000000000000
           Size.PlatformDefault = False
