--- a/Forms/VK.FMX.Captcha.fmx
+++ b/Forms/VK.FMX.Captcha.fmx
@@ -3,7 +3,7 @@ object FormFMXCaptcha: TFormFMXCaptcha
   Top = 0
   Caption = #1042#1074#1077#1076#1080#1090#1077' '#1082#1086#1076' '#1089' '#1082#1072#1088#1090#1080#1085#1082#1080
   ClientHeight = 260
-  ClientWidth = 280
+  ClientWidth = 321
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
@@ -11,18 +11,18 @@ object FormFMXCaptcha: TFormFMXCaptcha
   object Panel1: TPanel
     Align = Bottom
     Position.Y = 201.000000000000000000
-    Size.Width = 280.000000000000000000
+    Size.Width = 321.000000000000000000
     Size.Height = 59.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
-    object Button1: TButton
+    object ButtonOk: TButton
       Align = Right
       StyledSettings = [Family, Style, FontColor]
       Margins.Left = 12.000000000000000000
       Margins.Top = 12.000000000000000000
       Margins.Right = 12.000000000000000000
       Margins.Bottom = 12.000000000000000000
-      Position.X = 172.000000000000000000
+      Position.X = 213.000000000000000000
       Position.Y = 12.000000000000000000
       Size.Width = 96.000000000000000000
       Size.Height = 35.000000000000000000
@@ -30,7 +30,7 @@ object FormFMXCaptcha: TFormFMXCaptcha
       TabOrder = 0
       Text = #1054#1090#1087#1088#1072#1074#1080#1090#1100
       TextSettings.Font.Size = 13.000000000000000000
-      OnClick = Button1Click
+      OnClick = ButtonOkClick
     end
   end
   object Layout1: TLayout
