--- a/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
@@ -1,19 +1,31 @@
 object FrameChat: TFrameChat
-  Size.Width = 686.000000000000000000
+  Size.Width = 725.000000000000000000
   Size.Height = 775.000000000000000000
   Size.PlatformDefault = False
   object LayoutClient: TLayout
     Align = Client
-    Size.Width = 686.000000000000000000
+    Size.Width = 725.000000000000000000
     Size.Height = 775.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
+    object RectangleDesign: TRectangle
+      Align = Contents
+      Corners = [TopRight, BottomRight]
+      Fill.Color = xFF222222
+      Sides = [Top, Bottom, Right]
+      Size.Width = 725.000000000000000000
+      Size.Height = 775.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = xFF424242
+      XRadius = 12.000000000000000000
+      YRadius = 12.000000000000000000
+    end
     object RectangleHead: TRectangle
       Align = Top
       Corners = [TopRight]
-      Fill.Color = xFF222222
-      Sides = [Top, Bottom, Right]
-      Size.Width = 686.000000000000000000
+      Fill.Kind = None
+      Sides = [Bottom]
+      Size.Width = 725.000000000000000000
       Size.Height = 48.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
@@ -23,14 +35,14 @@ object FrameChat: TFrameChat
         Align = Client
         Padding.Left = 20.000000000000000000
         Padding.Right = 12.000000000000000000
-        Size.Width = 686.000000000000000000
+        Size.Width = 725.000000000000000000
         Size.Height = 48.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         object LayoutHeadNormal: TLayout
           Align = Client
           Locked = True
-          Size.Width = 618.000000000000000000
+          Size.Width = 657.000000000000000000
           Size.Height = 48.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 3
@@ -39,7 +51,7 @@ object FrameChat: TFrameChat
             Cursor = crHandPoint
             Images = DataModuleRes.ImageListSVG
             ImageIndex = 5
-            Position.X = 542.000000000000000000
+            Position.X = 581.000000000000000000
             Size.Width = 36.000000000000000000
             Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
@@ -52,7 +64,7 @@ object FrameChat: TFrameChat
             Cursor = crHandPoint
             Images = DataModuleRes.ImageListSVG
             ImageIndex = 4
-            Position.X = 470.000000000000000000
+            Position.X = 509.000000000000000000
             Size.Width = 36.000000000000000000
             Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
@@ -65,7 +77,7 @@ object FrameChat: TFrameChat
             Cursor = crHandPoint
             Images = DataModuleRes.ImageListSVG
             ImageIndex = 3
-            Position.X = 506.000000000000000000
+            Position.X = 545.000000000000000000
             Size.Width = 36.000000000000000000
             Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
@@ -79,7 +91,7 @@ object FrameChat: TFrameChat
             Margins.Left = 10.000000000000000000
             Margins.Top = 9.000000000000000000
             Margins.Bottom = 9.000000000000000000
-            Position.X = 588.000000000000000000
+            Position.X = 627.000000000000000000
             Position.Y = 9.000000000000000000
             Size.Width = 30.000000000000000000
             Size.Height = 30.000000000000000000
@@ -401,7 +413,7 @@ object FrameChat: TFrameChat
       Fill.Color = xFF292929
       Position.Y = 626.000000000000000000
       Sides = [Top, Bottom, Right]
-      Size.Width = 686.000000000000000000
+      Size.Width = 725.000000000000000000
       Size.Height = 67.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
@@ -414,26 +426,26 @@ object FrameChat: TFrameChat
         Size.Height = 50.000000000000000000
         Size.PlatformDefault = False
         Visible = False
-        TabOrder = 7
+        TabOrder = 8
         OnResize = LayoutFooterBottomResize
       end
       object LayoutFooterMessage: TLayout
-        Align = Client
-        Size.Width = 686.000000000000000000
-        Size.Height = 67.000000000000000000
+        Align = Top
+        Size.Width = 725.000000000000000000
+        Size.Height = 66.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 8
+        TabOrder = 9
         object LayoutSendControls: TLayout
           Align = Contents
-          Size.Width = 686.000000000000000000
-          Size.Height = 67.000000000000000000
+          Size.Width = 725.000000000000000000
+          Size.Height = 66.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 0
           object Layout3: TLayout
             Align = Bottom
             Locked = True
-            Position.Y = 4.000000000000000000
-            Size.Width = 686.000000000000000000
+            Position.Y = 3.000000000000000000
+            Size.Width = 725.000000000000000000
             Size.Height = 63.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 6
@@ -452,7 +464,7 @@ object FrameChat: TFrameChat
             object LayoutSend: TLayout
               Align = Right
               Locked = True
-              Position.X = 631.000000000000000000
+              Position.X = 670.000000000000000000
               Size.Width = 55.000000000000000000
               Size.Height = 63.000000000000000000
               Size.PlatformDefault = False
@@ -493,23 +505,69 @@ object FrameChat: TFrameChat
           Align = Client
           Fill.Kind = None
           HitTest = False
+          Padding.Right = 8.000000000000000000
           Margins.Left = 55.000000000000000000
           Margins.Top = 14.000000000000000000
           Margins.Right = 55.000000000000000000
           Margins.Bottom = 13.000000000000000000
-          Size.Width = 576.000000000000000000
-          Size.Height = 40.000000000000000000
+          Size.Width = 615.000000000000000000
+          Size.Height = 39.000000000000000000
           Size.PlatformDefault = False
           Stroke.Color = xFF555555
           XRadius = 6.000000000000000000
           YRadius = 6.000000000000000000
-          object Layout4: TLayout
+          object LayoutMessgeAcations: TLayout
             Align = Right
-            Position.X = 528.000000000000000000
-            Size.Width = 48.000000000000000000
-            Size.Height = 40.000000000000000000
+            Position.X = 497.000000000000000000
+            Size.Width = 110.000000000000000000
+            Size.Height = 39.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 2
+            object Layout1: TLayout
+              Align = Bottom
+              Position.Y = 2.000000000000000000
+              Size.Width = 110.000000000000000000
+              Size.Height = 37.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 3
+              object Button3: TButton
+                Align = MostRight
+                Cursor = crHandPoint
+                Images = DataModuleRes.ImageListSVG
+                ImageIndex = 25
+                Position.X = 38.000000000000000000
+                Size.Width = 36.000000000000000000
+                Size.Height = 37.000000000000000000
+                Size.PlatformDefault = False
+                StyleLookup = 'button_small_light'
+                TabOrder = 4
+                Text = 'Button1'
+              end
+              object Button4: TButton
+                Align = MostRight
+                Cursor = crHandPoint
+                Images = DataModuleRes.ImageListSVG
+                ImageIndex = 24
+                Position.X = 74.000000000000000000
+                Size.Width = 36.000000000000000000
+                Size.Height = 37.000000000000000000
+                Size.PlatformDefault = False
+                StyleLookup = 'button_small_light'
+                TabOrder = 3
+                Text = 'Button1'
+              end
+              object CheckBoxKeyboard: TCheckBox
+                Align = Right
+                Position.X = 2.000000000000000000
+                Size.Width = 36.000000000000000000
+                Size.Height = 37.000000000000000000
+                Size.PlatformDefault = False
+                StyleLookup = 'button_small_check'
+                TabOrder = 5
+                Text = 'CheckBoxKeyboard'
+                OnChange = CheckBoxKeyboardChange
+              end
+            end
           end
           object MemoText: TMemo
             Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
@@ -526,20 +584,20 @@ object FrameChat: TFrameChat
             Margins.Top = 10.000000000000000000
             Margins.Right = 10.000000000000000000
             Margins.Bottom = 10.000000000000000000
-            Size.Width = 508.000000000000000000
-            Size.Height = 20.000000000000000000
+            Size.Width = 477.000000000000000000
+            Size.Height = 19.000000000000000000
             Size.PlatformDefault = False
             StyleLookup = 'memo_clear'
             TabOrder = 1
             TabStop = False
             OnKeyDown = MemoTextKeyDown
-            Viewport.Width = 508.000000000000000000
-            Viewport.Height = 20.000000000000000000
+            Viewport.Width = 477.000000000000000000
+            Viewport.Height = 19.000000000000000000
             object LabelTextHint: TLabel
               Align = Client
               StyledSettings = [Style]
-              Size.Width = 50.000000000000000000
-              Size.Height = 50.000000000000000000
+              Size.Width = 477.000000000000000000
+              Size.Height = 19.000000000000000000
               Size.PlatformDefault = False
               TextSettings.Font.Family = 'Roboto'
               TextSettings.Font.Size = 13.000000000000000000
@@ -552,7 +610,7 @@ object FrameChat: TFrameChat
         end
       end
       object LayoutFooterTop: TLayout
-        Align = Top
+        Align = MostTop
         Size.Width = 686.000000000000000000
         Size.Height = 50.000000000000000000
         Size.PlatformDefault = False
@@ -560,25 +618,38 @@ object FrameChat: TFrameChat
         TabOrder = 6
         OnResize = LayoutFooterBottomResize
       end
+      object LayoutFooterKeyboard: TLayout
+        Align = Bottom
+        Margins.Left = 55.000000000000000000
+        Margins.Top = 8.000000000000000000
+        Margins.Right = 50.000000000000000000
+        Margins.Bottom = 13.000000000000000000
+        Position.Y = 17.000000000000000000
+        Size.Width = 686.000000000000000000
+        Size.Height = 50.000000000000000000
+        Size.PlatformDefault = False
+        Visible = False
+        TabOrder = 7
+      end
     end
     object RectangleChatBG: TRectangle
       Align = Client
-      Fill.Color = xFF222222
+      Fill.Kind = None
       Margins.Right = 1.000000000000000000
-      Size.Width = 685.000000000000000000
+      Size.Width = 724.000000000000000000
       Size.Height = 474.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       object VertScrollBoxMessages: TVertScrollBox
         Align = Contents
-        Size.Width = 685.000000000000000000
+        Size.Width = 724.000000000000000000
         Size.Height = 474.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         OnResize = VertScrollBoxMessagesResize
         OnResized = VertScrollBoxMessagesResize
         OnViewportPositionChange = VertScrollBoxMessagesViewportPositionChange
-        Viewport.Width = 685.000000000000000000
+        Viewport.Width = 724.000000000000000000
         Viewport.Height = 474.000000000000000000
         object LayoutMessageList: TLayout
           Position.Y = 16.000000000000000000
@@ -723,7 +794,7 @@ object FrameChat: TFrameChat
         Align = Bottom
         Margins.Bottom = 12.000000000000000000
         Position.Y = 412.000000000000000000
-        Size.Width = 685.000000000000000000
+        Size.Width = 724.000000000000000000
         Size.Height = 50.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
@@ -733,7 +804,7 @@ object FrameChat: TFrameChat
           Fill.Color = xFF292929
           Locked = True
           Margins.Right = 12.000000000000000000
-          Position.X = 633.000000000000000000
+          Position.X = 672.000000000000000000
           Size.Width = 40.000000000000000000
           Size.Height = 50.000000000000000000
           Size.PlatformDefault = False
@@ -773,11 +844,11 @@ object FrameChat: TFrameChat
     object RectangleAddToFriends: TRectangle
       Align = Top
       Corners = []
-      Fill.Color = xFF222222
+      Fill.Kind = None
       Margins.Right = 1.000000000000000000
       Position.Y = 48.000000000000000000
       Sides = [Bottom]
-      Size.Width = 685.000000000000000000
+      Size.Width = 724.000000000000000000
       Size.Height = 52.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
@@ -787,14 +858,14 @@ object FrameChat: TFrameChat
         Align = Client
         Padding.Left = 20.000000000000000000
         Padding.Right = 15.000000000000000000
-        Size.Width = 685.000000000000000000
+        Size.Width = 724.000000000000000000
         Size.Height = 52.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         object LabelAddFriendHint: TLabel
           Align = Client
           StyledSettings = [Style]
-          Size.Width = 465.000000000000000000
+          Size.Width = 504.000000000000000000
           Size.Height = 52.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Roboto'
@@ -810,7 +881,7 @@ object FrameChat: TFrameChat
           Margins.Left = 10.000000000000000000
           Margins.Top = 13.000000000000000000
           Margins.Bottom = 13.000000000000000000
-          Position.X = 495.000000000000000000
+          Position.X = 534.000000000000000000
           Position.Y = 13.000000000000000000
           Size.Width = 143.000000000000000000
           Size.Height = 26.000000000000000000
@@ -827,7 +898,7 @@ object FrameChat: TFrameChat
           Locked = True
           Margins.Left = 8.000000000000000000
           Margins.Right = 8.000000000000000000
-          Position.X = 646.000000000000000000
+          Position.X = 685.000000000000000000
           Size.Width = 16.000000000000000000
           Size.Height = 52.000000000000000000
           Size.PlatformDefault = False
@@ -873,7 +944,7 @@ object FrameChat: TFrameChat
       Padding.Left = 10.000000000000000000
       Position.Y = 693.000000000000000000
       Sides = [Top, Bottom, Right]
-      Size.Width = 686.000000000000000000
+      Size.Width = 725.000000000000000000
       Size.Height = 82.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
@@ -885,7 +956,7 @@ object FrameChat: TFrameChat
         Margins.Top = 23.000000000000000000
         Margins.Right = 30.000000000000000000
         Margins.Bottom = 23.000000000000000000
-        Size.Width = 616.000000000000000000
+        Size.Width = 655.000000000000000000
         Size.Height = 36.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 6
@@ -902,7 +973,7 @@ object FrameChat: TFrameChat
         object LabelWarningText: TLabel
           Align = Client
           StyledSettings = [Style]
-          Size.Width = 560.000000000000000000
+          Size.Width = 599.000000000000000000
           Size.Height = 36.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Roboto'
@@ -916,11 +987,11 @@ object FrameChat: TFrameChat
     object RectanglePinnedMessage: TRectangle
       Align = Top
       Corners = []
-      Fill.Color = xFF222222
+      Fill.Kind = None
       Margins.Right = 1.000000000000000000
       Position.Y = 100.000000000000000000
       Sides = [Bottom]
-      Size.Width = 685.000000000000000000
+      Size.Width = 724.000000000000000000
       Size.Height = 52.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFF424242
@@ -930,7 +1001,7 @@ object FrameChat: TFrameChat
         Align = Client
         Padding.Left = 20.000000000000000000
         Padding.Right = 15.000000000000000000
-        Size.Width = 685.000000000000000000
+        Size.Width = 724.000000000000000000
         Size.Height = 52.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -939,7 +1010,7 @@ object FrameChat: TFrameChat
           Locked = True
           Margins.Left = 8.000000000000000000
           Margins.Right = 8.000000000000000000
-          Position.X = 646.000000000000000000
+          Position.X = 685.000000000000000000
           Size.Width = 16.000000000000000000
           Size.Height = 52.000000000000000000
           Size.PlatformDefault = False
