--- a/Samples/ChatFMX/ChatFMX.Frame.Keyboard.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Keyboard.fmx
@@ -2,9 +2,13 @@ object FrameKeyboard: TFrameKeyboard
   Size.Width = 561.000000000000000000
   Size.Height = 113.000000000000000000
   Size.PlatformDefault = False
-  object Layout1: TLayout
-    Position.X = 168.000000000000000000
-    Position.Y = 40.000000000000000000
+  object VertScrollBoxLines: TVertScrollBox
+    Align = Client
+    Size.Width = 561.000000000000000000
+    Size.Height = 113.000000000000000000
+    Size.PlatformDefault = False
     TabOrder = 0
+    Viewport.Width = 561.000000000000000000
+    Viewport.Height = 113.000000000000000000
   end
 end
